--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "main": "src/index.js",
    "scripts": {
       "build": "rm -rf ./build && mkdir ./build && tsc",
+      "seed": "NODE_ENV=dev ts-node src/seeds/seed.ts",
       "dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only src/index.ts",
       "test": "NODE_ENV=test mocha -r ts-node/register src/tests/**/*.test.ts --exit -t 3000 --exit",
       "test:coverage": "NODE_ENV=test nyc mocha --config .mocharc.json src/tests/**/*.test.ts --exit -t 3000",
@@ -23,16 +24,16 @@
       "dotenv": "^16.4.5",
       "graphql": "^15.8.0",
       "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
+      "reflect-metadata": "^0.1.14",
       "type-graphql": "^1.1.1",
-      "typeorm": "0.3.20",
+      "typeorm": "^0.3.20",
+      "typeorm-extension": "^3.5.1",
       "uuid": "^9.0.1"
    },
    "devDependencies": {
       "@types/argon2": "^0.15.0",
       "@types/chai": "^4.3.12",
       "@types/jsonwebtoken": "^9.0.6",
-      "jsonwebtoken": "^9.0.2",
       "@types/mocha": "^10.0.6",
       "@types/node": "^17.0.1",
       "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -43,6 +44,7 @@
       "eslint-config-prettier": "^9.1.0",
       "eslint-plugin-prettier": "^5.1.3",
       "eslint-plugin-unicorn": "^51.0.1",
+      "jsonwebtoken": "^9.0.2",
       "mocha": "^10.3.0",
       "nyc": "^15.1.0",
       "prettier": "^3.2.5",
