--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.14",
       "type-graphql": "^1.1.1",
+      "typedi": "^0.10.0",
       "typeorm": "^0.3.20",
       "typeorm-extension": "^3.5.1",
       "uuid": "^9.0.1"
