--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
       "test:coverage": "NODE_ENV=test nyc mocha --config .mocharc.json src/tests/**/*.test.ts --exit -t 3000",
       "db:reset": "docker compose down && docker compose up -d --build",
       "lint": "eslint .",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "ts-node ./node_modules/typeorm/cli.js"
    },
    "keywords": [],
    "author": "",
@@ -27,7 +27,6 @@
       "reflect-metadata": "^0.1.14",
       "type-graphql": "^1.1.1",
       "typedi": "^0.10.0",
-      "typeorm": "^0.3.20",
       "typeorm-extension": "^3.5.1",
       "uuid": "^9.0.1"
    },
@@ -52,6 +51,7 @@
       "supertest": "^6.3.4",
       "ts-node": "^10.9.1",
       "ts-node-dev": "^2.0.0",
+      "typeorm": "^0.3.20",
       "typescript": "4.5.2"
    }
 }
